internal/gatewayapi/testdata/httproute-static-resolver-with-multiple-backends.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-1
  spec:
    hostnames:
    - gateway.envoyproxy.io
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
      sectionName: http
    rules:
    - backendRefs:
      - group: gateway.envoyproxy.io
        kind: Backend
        name: backend-static-resolver-header
      - group: gateway.envoyproxy.io
        kind: Backend
        name: backend-static-resolver-metadata
      - group: gateway.envoyproxy.io
        kind: Backend
        name: backend-endpoint
backends:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: backend-static-resolver-header
    namespace: default
  spec:
    type: StaticResolver
    staticResolver:
      overrideHostSources:
      - header: "target-pod"
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: backend-static-resolver-metadata
    namespace: default
  spec:
    type: StaticResolver
    staticResolver:
      overrideHostSources:
      - header: "target-pod"
      - metadata:
          key: "envoy.lb"
          path:
          - key: "override-host"
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: backend-endpoint
    namespace: default
  spec:
    endpoints:
    - ip:
        address: 1.1.1.1
        port: 3001
